--- a/web_front_end/scientfic_research_management/index.html
+++ b/web_front_end/scientfic_research_management/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>scientfic_research_management</title>
+    <style type="text/css">
+      html, body, #app{
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
