--- a/mangerSys/src/main/webapp/login.html
+++ b/mangerSys/src/main/webapp/login.html
@@ -1,4 +1,3 @@
-<%@page contentType="text/html; UTF-8" pageEncoding="UTF-8" isELIgnored="false" %>
 <!doctype html>
 <html lang="en">
 <head>
@@ -9,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-
+    <form action="/user/login" method="post">
+        <input type="text" name="username" value="用户"/>
+        <input type="text" name="password" value="密码"/>
+        <input type="submit" value="提交"/>
+    </form>
 </body>
 </html>
